--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,8 @@
 dash==2.3.0
 dash_bootstrap_components==1.0.3
 matplotlib==3.4.3
-numpy==1.21.4
+numpy==1.22.0
 pandas==1.3.4
 pandas_datareader==0.10.0
 plotly==5.1.0
+requests==2.23
